Set last login time, pretty login boxes Stop unnecessary text wrapping Set
2005-04-23  Thomas Wood  <thos@gnome.org>

	* account.php: Set last login time, pretty login boxes
	* default.css: Stop unnecessary text wrapping
	* includes/ago_headers.inc.php: Set cookie lifetime to one week
	* includes/art.inc.php: (Added)
	* includes/common.inc.php: Split out detail view funtions, updates for
	new vote system
	* users: Order author list by username, limit author theme/background
	list to 20 items
	* themes:
	* backgrounds:

	New voting system

--- a/default.css
+++ b/default.css
@@ -30,7 +30,13 @@ body {
 .theme_row {
 	clear: left;
 	padding: 10px;
+	width: 100%;
 }
+
+.theme_row_detail {
+	width:100%;
+}
+
 .theme_row_title{
 	display: block;
 	color: #455982;
